--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "risk-target-cards",
-  "version": "1.0.1",
+  "name": "@riskgame/target-cards",
+  "version": "1.0.0",
   "description": "Risk target cards",
   "main": "index.js",
   "repository": {
